2004-02-12  Naba Kumar  <naba@gnome.org>

	* configure.in, plugins/Makefile.am, plugins/devhelp/*:
	Added devhelp plugin, but it can't be used without a
	patch in devhelp. So it's disabled for now.

	* libanjuta/.cvsignore, libegg/toolbar/.cvsignore,
	libegg/treeviewutils/.cvsignore, plugins/editor/.cvsignore,
	plugins/message-view/.cvsignore, plugins/sample1/.cvsignore:
	Update cvsignore files.

	* libanjuta/plugins.c, widgets/e-splash.c:
	Fixed plugins loading to show splash icons.
	
	* plugins/message-view/anjuta-message-manager.plugin.in,
	plugins/message-view/plugin.c: Fixed plugin registered name.

	* plugins/message-view/anjuta-message-view.png,
	plugins/sample1/anjuta-sample-plugin.png: Update images.

	* src/Makefile.am, src/anjuta-app.c, src/layout.xml,
	src/main.c: Fixed layout loading.

	* plugins/devhelp/Makefile.am: Fixed error.

	* (removed) widgets/*, libanjuta/plugins.h,
	src/main.c: Transfered widgets to libanjuta/.
	
	* libegg/Makefile.am, libegg/*.c: Moved souce files in libegg
	toplevel directory to created only one library as libanjuta-egg.

	* data/Makefile.am: Fixed build error.

	* configure.in, libegg/egg-dock*.c, libegg/layout.glade,
	libegg/test-dock.c, libegg/dock/*, libegg/Makefile.am,
	libegg/.cvsignore: Added egg dock widget.

	* gdl/*: Removed as they are now available in libegg.
	
2004-02-11  Franco Catrin <fcatrin@tuxpan.com>

	* plugins/editor/anjuta-docman.c:
	Use stock close icon on tab close button

2004-02-11  Johannes Schmid <jhs@cvs.gnome.org>
	
	* data/template/Makefile.am
	data/template/language/Makefile.am
	data/template/library/Makefile.am
	data/template/text/Makefile.am
	data/template/project/Makefile.am
	data/template/project/terminal/Makefile.am
	configure.in: Created Makefile to install templates

2004-02-11  Naba Kumar  <naba@gnome.org>

	* plugins/editor/action-callbacks.c,
	plugins/editor/anjuta-document-manager.ui,
	plugins/editor/plugin.c
	plugins/message-view/anjuta-message-manager.ui,