@@ -22,7 +22,6 @@ VTE_NEW_REQUIRED=0.9.0
 LIBXML_REQUIRED=2.4.23
 PANGO_REQUIRED=1.1.1
 PCRE_REQUIRED=3.9
-GDL_REQUIRED=0.4.0
 
 AC_SUBST(GLIB_REQUIRED)
 AC_SUBST(GOBJECT_REQUIRED)
@@ -43,7 +42,6 @@ AC_SUBST(LIBXML_REQUIRED)
 AC_SUBST(PANGO_REQUIRED)
 AC_SUBST(VTE_NEW_REQUIRED)
 AC_SUBST(PCRE_REQUIRED)
-AC_SUBST(GDL_REQUIRED)
 
 AM_INIT_AUTOMAKE(anjuta, $ANJUTA_VERSION)
 AM_CONFIG_HEADER(config.h)
@@ -151,8 +149,7 @@ PKG_CHECK_MODULES(ANJUTA, \
 	libbonoboui-2.0 >= $BONOBO_UI_REQUIRED \
 	vte >= $VTE_REQUIRED \
 	libxml-2.0 >= $LIBXML_REQUIRED \
-	pango >= $PANGO_REQUIRED \
-	gdl-1.0 >= $GDL_REQUIRED)
+	pango >= $PANGO_REQUIRED)
 
 AC_SUBST(ANJUTA_CFLAGS)
 AC_SUBST(ANJUTA_LIBS)
@@ -165,15 +162,18 @@ PKG_CHECK_MODULES(LIBANJUTA, \
 	libglade-2.0 >= $LIBGLADE_REQUIRED \
 	libgnomeprint-2.2 >= $GNOME_PRINT_REQUIRED \
 	libgnomeprintui-2.2 >= $GNOME_PRINT_UI_REQUIRED \
-	libgnomeui-2.0 >= $GNOME_UI_REQUIRED \
-	gdl-1.0 >= $GDL_REQUIRED)
+	libgnomeui-2.0 >= $GNOME_UI_REQUIRED)
 
 AC_SUBST(LIBANJUTA_CFLAGS)
 AC_SUBST(LIBANJUTA_LIBS)
 
+dnl Check for Devhelp
+dnl -----------------
 dnl PKG_CHECK_MODULES(PLUGIN_DEVHELP, devhelp >= 0.0.6)
-dnl AC_SUBST(PLUGIN_DEVHELP_CFLAGS)
-dnl AC_SUBST(PLUGIN_DEVHELP_LIBS)
+PLUGIN_DEVHELP_CFLAG=""
+PLUGIN_DEVHELP_LIB=""
+AC_SUBST(PLUGIN_DEVHELP_CFLAGS)
+AC_SUBST(PLUGIN_DEVHELP_LIBS)
 
 dnl ***************************************************************************
 dnl Check for old vte version
