@@ -26,6 +26,7 @@
 			<menuitem name="Preferences" verb="ActionSettingsPreferences" />
 			<menuitem name="Defaults" verb="ActionSettingsDefaults" />
 			<menuitem name="Shortcuts" verb="ActionSettingsShortcuts" />
+			<menuitem name="Layout Manager" verb="ActionSettingsLayout" />
 		</submenu>
 		<submenu name="MenuHelp" verb="ActionMenuHelp" >
 			<menuitem name="Gnome" verb="ActionHelpGnome" />
